--- a/src/components/aboutPage/about.css
+++ b/src/components/aboutPage/about.css
@@ -11,6 +11,7 @@
 .about-text {
     width: 65%;
     padding: 5%;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
 }
 
 .about-image-container {
@@ -23,6 +24,7 @@
 .avatar {
     border-radius: 20px;
     margin-bottom: 5%;
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
 }
 
 .about-caption {
