--- a/src/components/aboutPage/devAbout.css
+++ b/src/components/aboutPage/devAbout.css
@@ -5,10 +5,10 @@
 
 .about-container.dev .about-text {
     border-radius: 20px 0px 0px 20px;
-    background-color: #0080f9;
+    background-color: rgb(0, 0, 0);
 }
 
 .avatar.dev {
-    border: solid 10px #0080f9;
-    background-color: #bd76bd;
+    border: solid 10px rgb(0, 0, 0);
+    background-color: rgb(171, 171, 241);
 }
