--- a/src/components/projectsPage/devProjects.css
+++ b/src/components/projectsPage/devProjects.css
@@ -43,6 +43,18 @@
     border-radius: 20px;
 }
 
+.card-front::before {
+    content: '';
+    position: absolute;
+    top: 5%;
+    bottom: 5%;
+    left: 5%;
+    right: 5%;
+    border: 2px solid rgb(171, 171, 241);
+    border-radius: 20px;
+    transform: translateZ(8rem);
+  }
+
 .front-titles {
     position: absolute;
     width: 100%;
@@ -55,7 +67,17 @@
     background-color: #2c16419d;
     border-radius: 20px;
     top: 0;
-    transform: translateZ(6rem);
+    transform: translateZ(3rem);
+    transform-style: preserve-3d;
+}
+
+.dev.card-title {
+    transform: translateZ(3rem);
+}
+
+
+.dev.card-subtitle {
+    transform: translateZ(2rem);
 }
 
 .card-back {
@@ -67,7 +89,6 @@
     height: 55%;
     overflow: scroll;
     padding: 5%;
-    font-size: 2.25vmin;
     text-align: center;
     /* backface-visibility: hidden; */
 }
@@ -81,7 +102,6 @@
     padding: 0% 5%;
     align-items: center;
     justify-content: center;
-    font-size: 2.25vmin;
 }
 
 .card-tool{ 
