--- a/src/components/toggleBar/togglebar.css
+++ b/src/components/toggleBar/togglebar.css
@@ -20,6 +20,7 @@
     justify-content: space-between;
     align-items: center;
     border-radius: 20px;
+    font-size: 16px;
     transition: background-position 1.5s linear;
 }
 
