--- a/src/components/projectsPage/projects.css
+++ b/src/components/projectsPage/projects.css
@@ -5,8 +5,8 @@
 }
 
 .projects-container {
-    height: 100vh;
-    overflow: scroll;
+    /* height: 100vh; */
+    /* overflow: scroll; */
     padding: 1%;
     display: flex;
     flex-direction: row-reverse;
