--- a/src/components/toggleBar/togglebar.css
+++ b/src/components/toggleBar/togglebar.css
@@ -22,6 +22,7 @@
     border-radius: 20px;
     font-size: 16px;
     transition: background-position 1.5s linear;
+    cursor: pointer;
 }
 
 .ball {
@@ -34,6 +35,7 @@
     transform: translateY(-50%) translateX(2px);
     border-radius: 50%;
     transition: left 0.5s linear, transform 0.5s linear;
+    cursor: pointer;
 }
 
 .fa-pencil-alt {
