--- a/src/components/filterMenu/designFilters.css
+++ b/src/components/filterMenu/designFilters.css
@@ -12,16 +12,14 @@
     bottom: -1%;
     z-index: -1;
     background: rgb(44,27,79);
-    background: linear-gradient(307deg, rgba(44,27,79,0.8230088495575221) 0%, rgba(253,81,118,0.8185840707964602) 50%, rgba(250,150,36,0.8207964601769911) 75%, rgba(255,215,75,0.8163716814159292) 100%);
+    background: linear-gradient(307deg, rgb(44, 27, 79) 0%, rgb(253, 81, 118) 50%, rgb(250, 150, 36) 75%, rgb(255, 216, 75) 100%);
     background-size: 250%;
     background-position: right;
     border-radius: 20px;
-    opacity: 0;
     transition: 500ms linear;
 }
 
 .filter-menu.des li:hover label::before,
 .filter-menu.des li label:hover::before {
-    opacity: 1;
     background-position: left;
 }
