--- a/src/components/contactPage/contact.css
+++ b/src/components/contactPage/contact.css
@@ -2,24 +2,26 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    align-items: center;
     text-align: center;
-    padding: 85px 3.5%;
+    padding: 5em 1.5em;
     min-height: 100vh;
 }
 
 .contact h3 {
-    margin-bottom: 2%;
+    margin-bottom: .5em;
 }
 
 .contact h3 ~ p {
     opacity: 0.8;
-    margin-bottom: 2%;
 }
 
 .social-links-container {
     display: flex;
     align-items: center;
     justify-content: space-evenly;
+    width: 80%;
+    max-width: 900px;
 }
 
 .social-item {
@@ -36,11 +38,6 @@
     transition: background-color 500ms linear;
 }
 
-.social-item p {
-    font-size: 1vw;
-}
-
 .social-icon {
-font-size: 4vw;
-margin: 2%;
+font-size: 1.5rem;
 }
