--- a/src/components/filterMenu/filterMenu.css
+++ b/src/components/filterMenu/filterMenu.css
@@ -2,26 +2,19 @@
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    padding: 2.5%;
-    height: 15vmin;
+    flex-wrap: wrap;
+    margin: 1em;
 }
 
 .filter-menu li {
     list-style: none;
-    width: 10vmin;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    margin: .25em;
     cursor: pointer;
 }
 
 .filter-menu li label {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    display: inline-block;
+    padding: 1em;
     text-align: center;
     transition: background-color 500ms linear;
     border-radius: 20px;
@@ -29,6 +22,4 @@
     position: relative;
     z-index: 1;
     overflow: hidden;
-    font-size: 1.5vmin;
-    margin: 5%;
 }
