--- a/src/components/projectsPage/projects.css
+++ b/src/components/projectsPage/projects.css
@@ -2,7 +2,8 @@
     background: rgba(0, 0, 0, 0.8);
     display: flex;
     flex-direction: column;
-    padding: 85px 3.5%;
+    align-items: center;
+    padding: 5em 1.5em;
 }
 
 .projects-container {
@@ -11,16 +12,16 @@
     flex-wrap: wrap-reverse;
     justify-content: center;
     align-content: flex-end;
+    width: 80%;
 }
 
 .card-title {
     text-align: center;
     text-transform: uppercase;
-    padding: 5%;
 }
 
 .card-subtitle {
-    padding: 5%;
+    padding: 1em;
     text-align: center;
     font-weight: 700;
     opacity: .7;
@@ -34,9 +35,16 @@
     text-decoration: none;
     color: currentColor;
     width: 100%;
-    padding: 5%;
+    padding: 1em;
 }
 
 .btn-text {
-    padding: 5%;
+    padding: .5em;
+}
+
+/* laptops */
+@media (min-width:600px) {
+    .projects-container {
+        width: 90%;
+    }
 }
