--- a/src/components/projectsPage/devProjects.css
+++ b/src/components/projectsPage/devProjects.css
@@ -1,7 +1,7 @@
 .project-card.dev {
     width: 100%;
     height: 45vw;
-    margin: 1em 0%;
+    margin: 1em 0;
 }
 
 .card-content.dev {
@@ -32,7 +32,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-end;
     border-radius: 20px;
 }
 
@@ -53,7 +53,7 @@
     border: 2px solid rgb(171, 171, 241);
     border-radius: 20px;
     transform: translateZ(8rem);
-  }
+}
 
 .front-titles {
     position: absolute;
@@ -63,7 +63,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    padding: 5%;
+    padding: 10%;
     background-color: #2c16419d;
     border-radius: 20px;
     top: 0;
@@ -88,28 +88,26 @@
 .card-description {
     height: 55%;
     overflow: scroll;
-    padding: 1.5em;
+    padding: 2em;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    /* backface-visibility: hidden; */
 }
 
 .card-tools {
     opacity: .7;
     display: inline-flex;
-    height: 25%;
     width: 100%;
     flex-wrap: wrap;
-    padding: 0% 1em;
+    padding: 1.5em;
     align-items: center;
     justify-content: center;
     font-size: .8rem;
 }
 
 .card-tool{ 
-    margin: 0% 1em;
+    margin: 0.2em 1em;
     text-align: center;
 }
 
