--- a/src/App.css
+++ b/src/App.css
@@ -1,114 +1,122 @@
 /* ------- universal styling ------- */
 * {
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 html {
-    height: 100vh;
-    scroll-behavior: smooth;
-    font-size: 16px;
+  height: 100vh;
+  scroll-behavior: smooth;
+  font-size: 16px;
 }
 
 ::selection {
-    background-color: #2c1b4f;
+  background-color: #2c1b4f;
 }
 
 .App,
 #root,
 body {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 
 .App {
-    overflow: scroll;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  overflow: scroll;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 body {
-    background: rgb(44,22,65);
-    background: radial-gradient(circle, rgba(44,22,65,1) 20%, rgba(74,58,158,1) 100%);
-    color: white;
-    transition: 300ms linear;
-    font-family: 'Lexend', sans-serif;
+  background: rgb(44, 22, 65); /* fallback for older browsers */
+  background: radial-gradient(
+    circle,
+    rgba(44, 22, 65, 1) 20%,
+    rgba(74, 58, 158, 1) 100%
+  );
+  color: white;
+  transition: 300ms linear;
+  font-family: "Lexend", sans-serif;
 }
 
 body.designMode {
-    background: rgb(134,58,168);
-    background: radial-gradient(circle, rgba(134,58,168,1) 20%, rgba(253,81,118,1) 100%);
+  background: rgb(134, 58, 168); /* fallback for older browsers */
+  background: radial-gradient(
+    circle,
+    rgba(134, 58, 168, 1) 20%,
+    rgba(253, 81, 118, 1) 100%
+  );
 }
 
 h1,
 h2,
 h3 {
-    font-family: 'Paytone One', sans-serif;
+  font-family: "Paytone One", sans-serif;
 }
 
 h1 {
-    text-align: center;
-    margin: 2%;
-    text-transform: uppercase;
-    font-size: 2rem;
+  text-align: center;
+  margin: 2%;
+  text-transform: uppercase;
+  font-size: 2rem;
 }
 
 h3 {
-    font-size: 1.2rem;
+  font-size: 1.2rem;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 .page {
-    width: 100%;
+  width: 100%;
 }
 
 .hide {
-    display: none;
+  display: none;
 }
 
 /* Component Stylesheets */
 /* Nav Menu */
-@import 'components/navMenu/nav.css';
-@import 'components/navMenu/designNav.css';
-@import 'components/navMenu/devNav.css';
+@import "components/navMenu/nav.css";
+@import "components/navMenu/designNav.css";
+@import "components/navMenu/devNav.css";
 
 /* Togglebar */
-@import 'components/toggleBar/togglebar.css';
+@import "components/toggleBar/togglebar.css";
 
 /* Home Page */
-@import 'components/homePage/devHome.css';
-@import 'components/homePage/designHome.css';
+@import "components/homePage/devHome.css";
+@import "components/homePage/designHome.css";
 
 /* About Page */
-@import 'components/aboutPage/about.css';
-@import 'components/aboutPage/designAbout.css';
-@import 'components/aboutPage/devAbout.css';
+@import "components/aboutPage/about.css";
+@import "components/aboutPage/designAbout.css";
+@import "components/aboutPage/devAbout.css";
 
 /* Filter Menu */
-@import 'components/filterMenu/filterMenu.css';
-@import 'components/filterMenu/designFilters.css';
-@import 'components/filterMenu/devFilters.css';
+@import "components/filterMenu/filterMenu.css";
+@import "components/filterMenu/designFilters.css";
+@import "components/filterMenu/devFilters.css";
 
 /* Projects Page */
-@import 'components/projectsPage/projects.css';
-@import 'components/projectsPage/designProjects.css';
-@import 'components/projectsPage/devProjects.css';
+@import "components/projectsPage/projects.css";
+@import "components/projectsPage/designProjects.css";
+@import "components/projectsPage/devProjects.css";
 
 /* Contact Page */
-@import 'components/contactPage/contact.css';
-@import 'components/contactPage/devContact.css';
-@import 'components/contactPage/designContact.css';
+@import "components/contactPage/contact.css";
+@import "components/contactPage/devContact.css";
+@import "components/contactPage/designContact.css";
 
 /* desktop */
-@media (min-width:1025px) {
-    html {
-        font-size: 18px;
-    }
+@media (min-width: 1025px) {
+  html {
+    font-size: 18px;
+  }
 }
