--- a/src/components/aboutPage/devAbout.css
+++ b/src/components/aboutPage/devAbout.css
@@ -1,9 +1,13 @@
 .about-container.dev {
-    background: rgb(74,58,158);
-    background: linear-gradient(0deg, rgba(74,58,158,1) 5%, rgba(0,0,0,1) 100%);
+  background: rgb(74, 58, 158);
+  background: linear-gradient(
+    0deg,
+    rgba(74, 58, 158, 1) 5%,
+    rgba(0, 0, 0, 1) 100%
+  );
 }
 
 .avatar.dev {
-    border: solid 10px rgb(0, 0, 0);
-    background-color: rgb(171, 171, 241);
+  border: solid 10px rgb(0, 0, 0);
+  background-color: rgb(171, 171, 241);
 }
