--- a/src/components/contactPage/devContact.css
+++ b/src/components/contactPage/devContact.css
@@ -1,30 +1,30 @@
 .contact.dev {
-    background-color: #4b3a9e;
+  background-color: #4b3a9e;
 }
 
 .dev .social-links-container .social-item {
-    background-color: #2c1641a2;
-    position: relative;
+  background-color: #2c1641a2;
+  position: relative;
 }
 
 .dev .social-links-container .social-item::before {
-    content: ' ';
-    position: absolute;
-    top: 5%;
-    bottom: 5%;
-    left: 5%;
-    right: 5%;
-    border: 2px solid rgb(171, 171, 241);
-    border-radius: 20px;
-    opacity: 0;
-    transition: opacity 500ms linear;
+  content: " ";
+  position: absolute;
+  top: 5%;
+  bottom: 5%;
+  left: 5%;
+  right: 5%;
+  border: 2px solid rgb(171, 171, 241);
+  border-radius: 20px;
+  opacity: 0;
+  transition: opacity 500ms linear;
 }
 
 .dev .social-links-container .social-item:hover {
-    background: #000000;
-    color: rgb(171, 171, 241);
+  background: #000000;
+  color: rgb(171, 171, 241);
 }
 
 .dev .social-links-container .social-item:hover::before {
-    opacity: 1;
+  opacity: 1;
 }
