--- a/src/components/projectsPage/designProjects.css
+++ b/src/components/projectsPage/designProjects.css
@@ -1,69 +1,69 @@
 .card-hover-area {
-    perspective: 1000px;
-    width: 100%;
-    height: 85vw;
-    margin: 1em 0%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    flex-direction: column;
+  perspective: 1000px;
+  width: 100%;
+  height: 85vw;
+  margin: 1em 0%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-direction: column;
 }
 
 .project-card.des {
-    transform-style: preserve-3d;
-    height: 75%;
-    width: 100%;
-    position: relative;
-    transition: 300ms linear;
+  transform-style: preserve-3d;
+  height: 75%;
+  width: 100%;
+  position: relative;
+  transition: transform 300ms linear;
 }
 
 .project-card.des img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    border-radius: 20px;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 20px;
 }
 
 .des.card-content {
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    transition: 250ms linear;
-    background-color: #863aa8bd;
-    border-radius: 20px;
-    opacity: 0;
-    padding: 1em;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: 0%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  transition: 250ms linear;
+  background-color: #863aa8bd;
+  border-radius: 20px;
+  opacity: 0;
+  padding: 1em;
 }
 
 .flickr-link {
-    background-color: darkorange;
-    justify-self: flex-end;
-    height: 15%;
-    border-radius: 20px;
+  background-color: darkorange;
+  justify-self: flex-end;
+  height: 15%;
+  border-radius: 20px;
 }
 
 .flickr-link:hover {
-    background-color:#fd5176 ;
-    color: #ffd74b;
+  background-color: #fd5176;
+  color: #ffd74b;
 }
 
 /* tablets */
-@media (min-width:600px) {
-    .card-hover-area {
-        width: 40%;
-        height: 45vw;
-        margin: 2.5% 5%;
-    }
+@media (min-width: 600px) {
+  .card-hover-area {
+    width: 40%;
+    height: 45vw;
+    margin: 2.5% 5%;
+  }
 }
 
 /* desktop */
-@media (min-width:1025px) {
-    .des.card-content {
-        padding: 2em;
-    }
+@media (min-width: 1025px) {
+  .des.card-content {
+    padding: 2em;
+  }
 }
