--- a/src/components/projectsPage/devProjects.css
+++ b/src/components/projectsPage/devProjects.css
@@ -1,169 +1,168 @@
 .project-card.dev {
-    width: 100%;
-    height: 45vw;
-    margin: 1em 0;
+  width: 100%;
+  height: 45vw;
+  margin: 1em 0;
 }
 
 .card-content.dev {
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    position: relative;
-    transition: transform 1s linear;
-    transform-style: preserve-3d;
-    border-radius: 20px;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  position: relative;
+  transition: transform 1s linear;
+  transform-style: preserve-3d;
+  border-radius: 20px;
 }
 
 .project-card.dev:hover .card-content {
-    transform: rotateY(.5turn);
+  transform: rotateY(0.5turn);
 }
 
 .card-front,
 .card-back {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    backface-visibility: hidden;
-    transform-style: preserve-3d;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-end;
-    border-radius: 20px;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  backface-visibility: hidden;
+  transform-style: preserve-3d;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  border-radius: 20px;
 }
 
 .card-front img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    border-radius: 20px;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  border-radius: 20px;
 }
 
 .card-front::before {
-    content: '';
-    position: absolute;
-    top: 5%;
-    bottom: 5%;
-    left: 5%;
-    right: 5%;
-    border: 2px solid rgb(171, 171, 241);
-    border-radius: 20px;
-    transform: translateZ(8rem);
+  content: "";
+  position: absolute;
+  top: 5%;
+  bottom: 5%;
+  left: 5%;
+  right: 5%;
+  border: 2px solid rgb(171, 171, 241);
+  border-radius: 20px;
+  transform: translateZ(8rem);
 }
 
 .front-titles {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding: 10%;
-    background-color: #2c16419d;
-    border-radius: 20px;
-    top: 0;
-    transform: translateZ(3rem);
-    transform-style: preserve-3d;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10%;
+  background-color: #2c16419d;
+  border-radius: 20px;
+  top: 0;
+  transform: translateZ(3rem);
+  transform-style: preserve-3d;
 }
 
 .dev.card-title {
-    transform: translateZ(3rem);
+  transform: translateZ(3rem);
 }
 
-
 .dev.card-subtitle {
-    transform: translateZ(2rem);
+  transform: translateZ(2rem);
 }
 
 .card-back {
-    transform: rotateY(.5turn);
-    background-color: #4a3a9e;
+  transform: rotateY(0.5turn);
+  background-color: #4a3a9e;
 }
 
 .card-description {
-    height: 55%;
-    overflow: scroll;
-    padding: 2em;
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
+  height: 55%;
+  overflow: scroll;
+  padding: 2em;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .card-tools {
-    opacity: .7;
-    display: inline-flex;
-    width: 100%;
-    flex-wrap: wrap;
-    padding: 1.5em;
-    align-items: center;
-    justify-content: center;
-    font-size: .8rem;
+  opacity: 0.7;
+  display: inline-flex;
+  width: 100%;
+  flex-wrap: wrap;
+  padding: 1.5em;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.8rem;
 }
 
-.card-tool{ 
-    margin: 0.2em 1em;
-    text-align: center;
+.card-tool {
+  margin: 0.2em 1em;
+  text-align: center;
 }
 
 .card-links {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 20%;
-    justify-self: flex-end;
-    border-radius: 0px 0px 20px 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 20%;
+  justify-self: flex-end;
+  border-radius: 0px 0px 20px 20px;
 }
 
 .demo-link {
-    height: 100%;
-    background-color: #4fe0d9d3;
-    border-radius: 0px 0px 0px 20px;
+  height: 100%;
+  background-color: #4fe0d9d3;
+  border-radius: 0px 0px 0px 20px;
 }
 
 .github-link {
-    height: 100%;
-    background-color: #0080f9;
-    border-radius: 0px 0px 20px 20px;
+  height: 100%;
+  background-color: #0080f9;
+  border-radius: 0px 0px 20px 20px;
 }
 
 .demo-link ~ .github-link {
-    height: 100%;
-    background-color: #0080f9;
-    border-radius: 0px 0px 20px 0px;
+  height: 100%;
+  background-color: #0080f9;
+  border-radius: 0px 0px 20px 0px;
 }
 
 .demo-link:hover,
 .github-link:hover {
-    background: #000000;
-    color: rgb(171, 171, 241);
+  background: #000000;
+  color: rgb(171, 171, 241);
 }
 
 .demo-link:active,
 .github-link:active,
 .demo-link:focus,
 .github-link:focus {
-    border: 1px solid rgb(171, 171, 241);
+  border: 1px solid rgb(171, 171, 241);
 }
 
 /* laptops */
-@media (min-width:801px) {
-    .project-card.dev {
-        width: 45%;
-        height: 35vw;
-        margin: 1em;
-    }
+@media (min-width: 801px) {
+  .project-card.dev {
+    width: 45%;
+    height: 35vw;
+    margin: 1em;
+  }
 }
 
 /* desktop */
-@media (min-width:1025px) {
-    .project-card.dev {
-        height: 25vw;
-    }
+@media (min-width: 1025px) {
+  .project-card.dev {
+    height: 25vw;
+  }
 }
