--- a/src/components/projectsPage/projects.css
+++ b/src/components/projectsPage/projects.css
@@ -1,50 +1,50 @@
 .projects {
-    background: rgba(0, 0, 0, 0.8);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 5em 1.5em;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5em 1.5em;
 }
 
 .projects-container {
-    display: flex;
-    flex-direction: row-reverse;
-    flex-wrap: wrap-reverse;
-    justify-content: center;
-    align-content: flex-end;
-    width: 80%;
+  display: flex;
+  flex-direction: row-reverse;
+  flex-wrap: wrap-reverse;
+  justify-content: center;
+  align-content: flex-end;
+  width: 80%;
 }
 
 .card-title {
-    text-align: center;
-    text-transform: uppercase;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .card-subtitle {
-    padding: 1em;
-    text-align: center;
-    font-weight: 700;
-    opacity: .7;
+  padding: 1em;
+  text-align: center;
+  font-weight: 700;
+  opacity: 0.7;
 }
 
 .social-btn {
-    display: flex;
-    text-align: center;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-    color: currentColor;
-    width: 100%;
-    padding: 1em;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: currentColor;
+  width: 100%;
+  padding: 1em;
 }
 
 .btn-text {
-    padding: .5em;
+  padding: 0.5em;
 }
 
 /* laptops */
-@media (min-width:600px) {
-    .projects-container {
-        width: 90%;
-    }
+@media (min-width: 600px) {
+  .projects-container {
+    width: 90%;
+  }
 }
